@@ -32,9 +32,11 @@ private:
     bool handleQ_PROPERTY(clang::CXXMethodDecl *);
     void VisitMacroExpands(const clang::Token &MacroNameTok, const clang::SourceRange &range, const clang::MacroInfo *minfo = nullptr) override;
     void registerQ_GADGET(clang::SourceLocation);
-    bool typeIsFullyQualified(clang::QualType t, std::string &qualifiedTypeName, std::string &typeName) const;
-    std::string getQualifiedNameOfType(const clang::Type *ptr, bool checkElabType = true) const;
-    std::string resolveTemplateType(const clang::TemplateSpecializationType *ptr, bool checkElabType = true) const;
+    bool typeIsFullyQualified(clang::QualType t, std::string &qualifiedTypeName, const std::string &typeName) const;
+    std::string getQualifiedNameOfType(const clang::Type *ptr, bool resolveTemplateArgs) const;
+    std::string resolveTemplateType(const clang::TemplateSpecializationType *ptr, bool resolveTemplateArgs) const;
+
+    std::string writtenType(const clang::ParmVarDecl *param) const;
 
     std::vector<clang::SourceLocation> m_qgadgetMacroLocations;
 };
